fix scrollbar issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,6 +20,8 @@ a {
 
 * {
     box-sizing: border-box;
+
+    scrollbar-width: thin;
 }
 
 .light {
