--- a/styles/sidebar.module.scss
+++ b/styles/sidebar.module.scss
@@ -1,7 +1,7 @@
 .main {
     width: 100vw;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: hidden;
     display: grid;
     grid-template-columns: minmax(200px, 1fr) 3fr;
 }
