--- a/styles/tutorial.module.scss
+++ b/styles/tutorial.module.scss
@@ -1,12 +1,11 @@
 .page {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+    padding: 1.25rem;
 
     margin-left: auto;
     margin-right: auto;
 
     height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .card {
